make client registry

--- a/notebooks/quickstart/full_flow.ipynb
+++ b/notebooks/quickstart/full_flow.ipynb
@@ -16,6 +16,37 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "3a360de6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from syft_core.url import SyftBoxURL\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "dba045b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "syft_core.url.SyftBoxURL"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SyftBoxURL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "1",
    "metadata": {
     "metadata": {}
@@ -25,8 +56,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2025-03-07 10:31:43.892\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36msyft_rds.orchestra\u001b[0m:\u001b[36msetup_rds_stack\u001b[0m:\u001b[36m89\u001b[0m - \u001b[33m\u001b[1mUsing shared data directory for both clients. Any file permission checks will be skipped as both clients have access to the same files.\u001b[0m\n",
-      "\u001b[32m2025-03-07 10:31:43.899\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msyft_rds.orchestra\u001b[0m:\u001b[36msetup_rds_stack\u001b[0m:\u001b[36m112\u001b[0m - \u001b[1mLaunching mock RDS stack in /var/folders/q1/ryq93kwj055dlbpngxv1c7z40000gn/T/rds_nq8uplfx...\u001b[0m\n"
+      "\u001b[32m2025-03-07 12:46:47.581\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36msyft_rds.orchestra\u001b[0m:\u001b[36msetup_rds_stack\u001b[0m:\u001b[36m89\u001b[0m - \u001b[33m\u001b[1mUsing shared data directory for both clients. Any file permission checks will be skipped as both clients have access to the same files.\u001b[0m\n",
+      "\u001b[32m2025-03-07 12:46:47.593\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msyft_rds.orchestra\u001b[0m:\u001b[36msetup_rds_stack\u001b[0m:\u001b[36m112\u001b[0m - \u001b[1mLaunching mock RDS stack in /var/folders/q1/ryq93kwj055dlbpngxv1c7z40000gn/T/rds_1iouxw3n...\u001b[0m\n"
      ]
     }
    ],
@@ -36,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "2",
    "metadata": {
     "metadata": {}
@@ -59,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "4450a5f5",
    "metadata": {},
    "outputs": [],
@@ -69,12 +100,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "b22ed1c8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "private_dir = CWD / \"data\" / \"dataset-1\" / \"private\"\n",
     "mock_dir = CWD / \"data\" / \"dataset-1\" / \"mock\"\n",
     "markdown_path = CWD / \"data\" / \"dataset-1\" / \"description.md\"\n",
@@ -95,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "6",
    "metadata": {
     "metadata": {}
@@ -113,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "ed885a96",
    "metadata": {
     "metadata": {}
@@ -123,9 +153,10 @@
      "data": {
       "text/plain": [
        "[Dataset\n",
-       "   uid: 30fb05f2-27a1-4be4-a841-5e7fb1b6123b\n",
-       "   created_at: 2025-03-07T09:31:44.033458Z\n",
-       "   updated_at: 2025-03-07T09:31:44.033463Z\n",
+       "   uid: 07d47774-9f37-4db5-a9f0-588c87e6cd1f\n",
+       "   created_at: 2025-03-07T11:46:47.812700Z\n",
+       "   updated_at: 2025-03-07T11:46:47.812706Z\n",
+       "   client_id: None\n",
        "   name: dataset-1\n",
        "   private: syft://data_owner@test.openmined.org/private/datasets/dataset-1\n",
        "   mock: syft://data_owner@test.openmined.org/public/datasets/dataset-1\n",
@@ -134,7 +165,7 @@
        "   tags: []]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "f01bc8bd",
    "metadata": {
     "metadata": {}
@@ -165,9 +196,10 @@
      "data": {
       "text/plain": [
        "[Dataset\n",
-       "   uid: 30fb05f2-27a1-4be4-a841-5e7fb1b6123b\n",
-       "   created_at: 2025-03-07T09:31:44.033458Z\n",
-       "   updated_at: 2025-03-07T09:31:44.033463Z\n",
+       "   uid: 07d47774-9f37-4db5-a9f0-588c87e6cd1f\n",
+       "   created_at: 2025-03-07T11:46:47.812700Z\n",
+       "   updated_at: 2025-03-07T11:46:47.812706Z\n",
+       "   client_id: None\n",
        "   name: dataset-1\n",
        "   private: syft://data_owner@test.openmined.org/private/datasets/dataset-1\n",
        "   mock: syft://data_owner@test.openmined.org/public/datasets/dataset-1\n",
@@ -176,7 +208,7 @@
        "   tags: []]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "1e3187d3",
    "metadata": {
     "metadata": {}
@@ -196,10 +228,10 @@
     {
      "data": {
       "text/plain": [
-       "PosixPath('/private/var/folders/q1/ryq93kwj055dlbpngxv1c7z40000gn/T/rds_nq8uplfx/shared_client_dir/datasites/data_owner@test.openmined.org/public/datasets/dataset-1')"
+       "PosixPath('/private/var/folders/q1/ryq93kwj055dlbpngxv1c7z40000gn/T/rds_1iouxw3n/shared_client_dir/datasites/data_owner@test.openmined.org/public/datasets/dataset-1')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,17 +242,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "7587c6e7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "PosixPath('/private/var/folders/q1/ryq93kwj055dlbpngxv1c7z40000gn/T/rds_nq8uplfx/shared_client_dir/datasites/data_owner@test.openmined.org/private/datasets/dataset-1')"
+       "PosixPath('/private/var/folders/q1/ryq93kwj055dlbpngxv1c7z40000gn/T/rds_1iouxw3n/shared_client_dir/datasites/data_owner@test.openmined.org/private/datasets/dataset-1')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "2dfa6cc1",
    "metadata": {
     "metadata": {}
@@ -251,7 +283,7 @@
        "True"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "1913b77c",
    "metadata": {
     "metadata": {}
@@ -277,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "027b91fe",
    "metadata": {},
    "outputs": [],
@@ -287,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "9de98a73",
    "metadata": {
     "metadata": {}
@@ -317,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "f0fef0ee",
    "metadata": {
     "metadata": {}
@@ -327,21 +359,22 @@
      "data": {
       "text/plain": [
        "Job\n",
-       "  uid: cde5fda7-8de3-4ee2-89ee-cc3b1c731353\n",
-       "  created_at: 2025-03-07T09:31:44.301955Z\n",
-       "  updated_at: 2025-03-07T09:31:44.301958Z\n",
-       "  name: hybrid_stack_mqa7\n",
+       "  uid: 1cc8479e-224e-4737-93e0-2143ec6d9057\n",
+       "  created_at: 2025-03-07T11:46:48.343335Z\n",
+       "  updated_at: 2025-03-07T11:46:48.343338Z\n",
+       "  client_id: 24a8c561-b1d0-40e7-8c10-21c01fa9062f\n",
+       "  name: binary_signal_0ldj\n",
        "  description: None\n",
-       "  user_code_id: 678b6cb1-104f-4a45-9f8b-a6ffef8cab37\n",
+       "  user_code_id: 5f7bb945-b971-4c03-82a7-c816d5b33b80\n",
        "  tags: []\n",
        "  user_metadata: {}\n",
        "  status: pending_code_review\n",
        "  error: no_error\n",
-       "  output_url: syft://data_owner@test.openmined.org/api_data/RDS/output/cde5fda7-8de3-4ee2-89ee-cc3b1c731353\n",
+       "  output_url: syft://data_owner@test.openmined.org/api_data/RDS/output/1cc8479e-224e-4737-93e0-2143ec6d9057\n",
        "  dataset_name: dataset-1"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,17 +389,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "1e8896ae",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<syft_rds.client.rds_client.RDSClient at 0x10891cd40>"
+       "<syft_rds.client.rds_client.RDSClient at 0x10a32a630>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "3d8fcaa4",
    "metadata": {},
    "outputs": [],
@@ -387,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "8ea2e6f9",
    "metadata": {},
    "outputs": [],
@@ -397,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "bea74103",
    "metadata": {},
    "outputs": [
@@ -405,21 +438,22 @@
      "data": {
       "text/plain": [
        "Job\n",
-       "  uid: cde5fda7-8de3-4ee2-89ee-cc3b1c731353\n",
-       "  created_at: 2025-03-07T09:31:44.301955Z\n",
-       "  updated_at: 2025-03-07T09:31:44.301958Z\n",
-       "  name: hybrid_stack_mqa7\n",
+       "  uid: 1cc8479e-224e-4737-93e0-2143ec6d9057\n",
+       "  created_at: 2025-03-07T11:46:48.343335Z\n",
+       "  updated_at: 2025-03-07T11:46:48.343338Z\n",
+       "  client_id: 57af69e3-46fa-4226-8fac-acfe13423fa4\n",
+       "  name: binary_signal_0ldj\n",
        "  description: None\n",
-       "  user_code_id: 678b6cb1-104f-4a45-9f8b-a6ffef8cab37\n",
+       "  user_code_id: 5f7bb945-b971-4c03-82a7-c816d5b33b80\n",
        "  tags: []\n",
        "  user_metadata: {}\n",
        "  status: pending_code_review\n",
        "  error: no_error\n",
-       "  output_url: syft://data_owner@test.openmined.org/api_data/RDS/output/cde5fda7-8de3-4ee2-89ee-cc3b1c731353\n",
+       "  output_url: syft://data_owner@test.openmined.org/api_data/RDS/output/1cc8479e-224e-4737-93e0-2143ec6d9057\n",
        "  dataset_name: dataset-1"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "id": "6f015abb",
    "metadata": {},
    "outputs": [
@@ -438,7 +472,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2025-03-07 10:32:51.713\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36msyft_rds.client.rds_client\u001b[0m:\u001b[36mrun_private\u001b[0m:\u001b[36m119\u001b[0m - \u001b[33m\u001b[1mRunning job without docker is not secure\u001b[0m\n"
+      "\u001b[32m2025-03-07 12:46:48.764\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36msyft_rds.client.rds_client\u001b[0m:\u001b[36mrun_private\u001b[0m:\u001b[36m123\u001b[0m - \u001b[33m\u001b[1mRunning job without docker is not secure\u001b[0m\n"
      ]
     },
     {
@@ -448,7 +482,7 @@
        "<span style=\"color: #008080; text-decoration-color: #008080\">│</span> <span style=\"color: #008000; text-decoration-color: #008000; font-weight: bold\">Starting job</span>                                                                 <span style=\"color: #008080; text-decoration-color: #008080\">│</span>\n",
        "<span style=\"color: #008080; text-decoration-color: #008080\">│</span> <span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0; font-weight: bold\">Execution:</span> <span style=\"color: #008080; text-decoration-color: #008080\">python code1.py</span>                                                   <span style=\"color: #008080; text-decoration-color: #008080\">│</span>\n",
        "<span style=\"color: #008080; text-decoration-color: #008080\">│</span> <span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0; font-weight: bold\">Dataset Dir.:</span>  <span style=\"color: #008080; text-decoration-color: #008080\">.../data_owner@test.openmined.org/private/datasets/dataset-1</span>  <span style=\"color: #008080; text-decoration-color: #008080\">│</span>\n",
-       "<span style=\"color: #008080; text-decoration-color: #008080\">│</span> <span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0; font-weight: bold\">Output Dir.:</span>   <span style=\"color: #008080; text-decoration-color: #008080\">.../tmp/syft-rds-jobs/cde5fda78de34ee289eecc3b1c731353/output</span> <span style=\"color: #008080; text-decoration-color: #008080\">│</span>\n",
+       "<span style=\"color: #008080; text-decoration-color: #008080\">│</span> <span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0; font-weight: bold\">Output Dir.:</span>   <span style=\"color: #008080; text-decoration-color: #008080\">.../tmp/syft-rds-jobs/1cc8479e224e473793e02143ec6d9057/output</span> <span style=\"color: #008080; text-decoration-color: #008080\">│</span>\n",
        "<span style=\"color: #008080; text-decoration-color: #008080\">│</span> <span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0; font-weight: bold\">Timeout:</span>  <span style=\"color: #008080; text-decoration-color: #008080\">60s</span>                                                                <span style=\"color: #008080; text-decoration-color: #008080\">│</span>\n",
        "<span style=\"color: #008080; text-decoration-color: #008080\">╰──────────────────────────────────────────────────────────────────────────────╯</span>\n",
        "</pre>\n"
@@ -458,7 +492,7 @@
        "\u001b[36m│\u001b[0m \u001b[1;32mStarting job\u001b[0m                                                                 \u001b[36m│\u001b[0m\n",
        "\u001b[36m│\u001b[0m \u001b[1;37mExecution:\u001b[0m \u001b[36mpython code1.py\u001b[0m                                                   \u001b[36m│\u001b[0m\n",
        "\u001b[36m│\u001b[0m \u001b[1;37mDataset Dir.:\u001b[0m  \u001b[36m.../data_owner@test.openmined.org/private/datasets/dataset-1\u001b[0m  \u001b[36m│\u001b[0m\n",
-       "\u001b[36m│\u001b[0m \u001b[1;37mOutput Dir.:\u001b[0m   \u001b[36m.../tmp/syft-rds-jobs/cde5fda78de34ee289eecc3b1c731353/output\u001b[0m \u001b[36m│\u001b[0m\n",
+       "\u001b[36m│\u001b[0m \u001b[1;37mOutput Dir.:\u001b[0m   \u001b[36m.../tmp/syft-rds-jobs/1cc8479e224e473793e02143ec6d9057/output\u001b[0m \u001b[36m│\u001b[0m\n",
        "\u001b[36m│\u001b[0m \u001b[1;37mTimeout:\u001b[0m  \u001b[36m60s\u001b[0m                                                                \u001b[36m│\u001b[0m\n",
        "\u001b[36m╰──────────────────────────────────────────────────────────────────────────────╯\u001b[0m\n"
       ]
@@ -524,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "id": "a7afabc4",
    "metadata": {},
    "outputs": [
@@ -532,7 +566,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2025-03-07 10:33:56.582\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msyft_rds.client.rds_clients.jobs\u001b[0m:\u001b[36mshare_results\u001b[0m:\u001b[36m94\u001b[0m - \u001b[1mShared results for job cde5fda7-8de3-4ee2-89ee-cc3b1c731353 at /private/var/folders/q1/ryq93kwj055dlbpngxv1c7z40000gn/T/rds_nq8uplfx/shared_client_dir/datasites/data_owner@test.openmined.org/api_data/RDS/output/cde5fda7-8de3-4ee2-89ee-cc3b1c731353\u001b[0m\n"
+      "\u001b[32m2025-03-07 12:46:49.133\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msyft_rds.client.rds_clients.jobs\u001b[0m:\u001b[36mshare_results\u001b[0m:\u001b[36m94\u001b[0m - \u001b[1mShared results for job 1cc8479e-224e-4737-93e0-2143ec6d9057 at /private/var/folders/q1/ryq93kwj055dlbpngxv1c7z40000gn/T/rds_1iouxw3n/shared_client_dir/datasites/data_owner@test.openmined.org/api_data/RDS/output/1cc8479e-224e-4737-93e0-2143ec6d9057\u001b[0m\n"
      ]
     }
    ],
@@ -542,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 24,
    "id": "ade77204",
    "metadata": {},
    "outputs": [],
@@ -552,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 25,
    "id": "cdfd1f37",
    "metadata": {},
    "outputs": [],
@@ -562,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 26,
    "id": "31c59d58",
    "metadata": {},
    "outputs": [],
@@ -572,17 +606,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 27,
+   "id": "fc4a9b39",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "job._syftbox_client"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "4b007199",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PosixPath('/private/var/folders/q1/ryq93kwj055dlbpngxv1c7z40000gn/T/rds_1iouxw3n/shared_client_dir/datasites')"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds_client._syftbox_client.datasites"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "f02e696d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'syft://data_owner@test.openmined.org/api_data/RDS/output/cde5fda7-8de3-4ee2-89ee-cc3b1c731353'"
+       "'syft://data_owner@test.openmined.org/api_data/RDS/output/1cc8479e-224e-4737-93e0-2143ec6d9057'"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,8 +658,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "586f85d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PosixPath('/private/var/folders/q1/ryq93kwj055dlbpngxv1c7z40000gn/T/rds_1iouxw3n/shared_client_dir/datasites/data_owner@test.openmined.org/api_data/RDS/output/1cc8479e-224e-4737-93e0-2143ec6d9057')"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "job.get_output_path()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "586e8925",
    "metadata": {},
    "outputs": [],
    "source": []
