dataset get and get_all for DatasetRDSClient follow the same pattern as JobRDSClient.

--- a/notebooks/api/dataset_do.ipynb
+++ b/notebooks/api/dataset_do.ipynb
@@ -103,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "census_data = rds_client.dataset.get(\"Census\")\n",
+    "census_data = rds_client.dataset.get(name=\"Census\")\n",
     "census_data"
    ]
   },
@@ -201,7 +201,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "medMnist_data = rds_client.dataset.get(\"MedMNIST\")\n",
+    "medMnist_data = rds_client.dataset.get(name=\"MedMNIST\")\n",
     "medMnist_data"
    ]
   },
