--- a/notebooks/api/dataset_ds.ipynb
+++ b/notebooks/api/dataset_ds.ipynb
@@ -51,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "med_mnist = rds_client.dataset.get(\"MedMNIST\")\n",
+    "med_mnist = rds_client.dataset.get(name=\"MedMNIST\")\n",
     "med_mnist"
    ]
   },
@@ -136,7 +136,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "census = rds_client.dataset.get(\"Census\")\n",
+    "census = rds_client.dataset.get(name=\"Census\")\n",
     "census"
    ]
   },
