--- a/notebooks/quickstart/full_flow.ipynb
+++ b/notebooks/quickstart/full_flow.ipynb
@@ -164,7 +164,7 @@
    },
    "outputs": [],
    "source": [
-    "ds_client.dataset.get(\"dataset-1\").get_mock_path()"
+    "ds_client.dataset.get(name=\"dataset-1\").get_mock_path()"
    ]
   },
   {
@@ -174,7 +174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_client.dataset.get(\"dataset-1\").get_private_path()"
+    "ds_client.dataset.get(name=\"dataset-1\").get_private_path()"
    ]
   },
   {
@@ -186,7 +186,7 @@
    },
    "outputs": [],
    "source": [
-    "dataset = ds_client.dataset.get(\"dataset-1\")\n",
+    "dataset = ds_client.dataset.get(name=\"dataset-1\")\n",
     "dataset.describe()"
    ]
   },
