--- a/notebooks/quickstart/full_flow.ipynb
+++ b/notebooks/quickstart/full_flow.ipynb
@@ -384,7 +384,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
