--- a/notebooks/internal/store_querying.ipynb
+++ b/notebooks/internal/store_querying.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "do_client = stack.do_rds_client\n",
     "\n",
-    "for i in range(100):\n",
+    "for i in range(10):\n",
     "    job_create = JobCreate(\n",
     "        name=f\"Job {i}\",\n",
     "        runtime=\"python3.9\",\n",
@@ -89,12 +89,27 @@
     "# First 5 jobs, default sort order is created_at, desc\n",
     "jobs = do_client.jobs.get_all(\n",
     "    status=\"pending_code_review\",\n",
-    "    limit=5,\n",
-    "    order_by=\"name\",\n",
-    "    sort_order=\"asc\",\n",
     ")\n",
     "\n",
-    "TableList(jobs)"
+    "jobs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TableList(jobs) + [jobs[-1]]"
    ]
   }
  ],
