--- a/notebooks/internal/store_querying.ipynb
+++ b/notebooks/internal/store_querying.ipynb
@@ -7,8 +7,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import syft_rds as sy\n",
+    "\n",
     "from syft_rds.orchestra import setup_rds_stack\n",
-    "from syft_rds.jupyter_utils.types import TableList\n",
     "from syft_rds.models.models import JobCreate\n",
     "from uuid import uuid4"
    ]
@@ -87,11 +88,9 @@
    "outputs": [],
    "source": [
     "# First 5 jobs, default sort order is created_at, desc\n",
-    "jobs = do_client.jobs.get_all(\n",
-    "    status=\"pending_code_review\",\n",
-    ")\n",
+    "jobs = do_client.dataset.get_all()\n",
     "\n",
-    "jobs"
+    "type(jobs)"
    ]
   },
   {
@@ -100,7 +99,9 @@
    "id": "6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sy.display({job.name: job for job in jobs})"
+   ]
   },
   {
    "cell_type": "code",
@@ -108,9 +109,7 @@
    "id": "7",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "TableList(jobs) + [jobs[-1]]"
-   ]
+   "source": []
   }
  ],
  "metadata": {
