--- a/notebooks/quickstart/full_flow.ipynb
+++ b/notebooks/quickstart/full_flow.ipynb
@@ -233,9 +233,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "18",
+   "metadata": {},
+   "source": [
+    "# Submit a job to create UserCode and a Job"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "19",
    "metadata": {
     "metadata": {}
    },
@@ -248,21 +256,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ds_client"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
-    "jobs = do_client.jobs.get_all()"
+    "# Code file is moved to a location inside syftbox\n",
+    "\n",
+    "code = ds_client.user_code.get(uid=job.user_code_id)\n",
+    "print(code)\n",
+    "\n",
+    "print(code.local_file)\n",
+    "\n",
+    "assert code.local_file.exists()"
    ]
   },
   {
@@ -272,7 +277,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "job = jobs[-1]"
+    "jobs = do_client.jobs.get_all()"
    ]
   },
   {
@@ -282,7 +287,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "job"
+    "job = jobs[-1]"
    ]
   },
   {
@@ -292,7 +297,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res_job = do_client.run_private(job)"
+    "job"
    ]
   },
   {
@@ -302,7 +307,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "do_client.jobs.share_results(res_job);"
+    "res_job = do_client.run_private(job)"
    ]
   },
   {
@@ -311,12 +316,22 @@
    "id": "25",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "do_client.jobs.share_results(res_job);"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "26",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -398,7 +413,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
