--- a/notebooks/quickstart/full_flow.ipynb
+++ b/notebooks/quickstart/full_flow.ipynb
@@ -194,16 +194,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "15",
-   "metadata": {
-    "metadata": {}
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "16",
    "metadata": {
     "metadata": {}
    },
@@ -234,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18",
+   "id": "17",
    "metadata": {},
    "source": [
     "# Submit a job to create UserCode and a Job"
@@ -243,31 +233,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "18",
    "metadata": {
     "metadata": {}
    },
    "outputs": [],
    "source": [
     "job = ds_client.jobs.submit(user_code_path=my_file, dataset_name=dataset.name)\n",
-    "job"
+    "job.describe()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Code file is moved to a location inside syftbox\n",
     "\n",
-    "code = ds_client.user_code.get(uid=job.user_code_id)\n",
-    "print(code)\n",
+    "code = job.user_code\n",
+    "assert code.local_file.exists()\n",
     "\n",
-    "print(code.local_file)\n",
-    "\n",
-    "assert code.local_file.exists()"
+    "# Same as: job.code.describe()\n",
+    "job.show_user_code()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20",
+   "metadata": {},
+   "source": [
+    "# DO reviews"
    ]
   },
   {
@@ -277,7 +274,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "jobs = do_client.jobs.get_all()"
+    "jobs = do_client.jobs.get_all(status=\"pending_code_review\")\n",
+    "jobs"
    ]
   },
   {
@@ -287,7 +285,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "job = jobs[-1]"
+    "job = jobs[-1]\n",
+    "\n",
+    "# same as job.code.describe()\n",
+    "job.show_user_code()"
    ]
   },
   {
@@ -297,7 +298,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "job"
+    "res_job = do_client.run_private(job)"
    ]
   },
   {
@@ -307,41 +308,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res_job = do_client.run_private(job)"
+    "do_client.jobs.share_results(res_job);"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "25",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "do_client.jobs.share_results(res_job);"
+    "# DS views the results"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "26",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "27",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# job.add_to_queue()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,50 +332,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
-    "job._syftbox_client"
+    "# DS can see files in the output path\n",
+    "job.describe()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_client._syftbox_client.datasites"
+    "output_files = [f for f in job.output_path.glob(\"**/*\") if f.is_file()]\n",
+    "assert len(output_files)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "31",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "job.output_url"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "32",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "job.get_output_path()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "33",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
