--- a/notebooks/quickstart/full_flow_functions.ipynb
+++ b/notebooks/quickstart/full_flow_functions.ipynb
@@ -22,16 +22,6 @@
     "metadata": {}
    },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2",
-   "metadata": {
-    "metadata": {}
-   },
-   "outputs": [],
    "source": [
     "stack = setup_rds_stack(log_level=\"INFO\")"
    ]
@@ -39,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3",
+   "id": "2",
    "metadata": {
     "metadata": {}
    },
@@ -51,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4",
+   "id": "3",
    "metadata": {
     "metadata": {}
    },
@@ -62,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "4",
    "metadata": {
     "metadata": {}
    },
@@ -74,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "5",
    "metadata": {
     "metadata": {}
    },
@@ -95,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "6",
    "metadata": {
     "metadata": {}
    },
@@ -105,9 +95,9 @@
     "\n",
     "import os\n",
     "\n",
-    "INPUT_FILE = os.environ[\"INPUT_FILE\"]\n",
-    "OUTPUT_DIR = os.environ[\"OUTPUT_DIR\"]\n",
-    "SECRET_KEY = os.environ[\"SECRET_KEY\"]\n",
+    "INPUT_FILE = os.environ[\"INPUT_FILE\"] # user input file\n",
+    "OUTPUT_DIR = os.environ[\"OUTPUT_DIR\"] # job output directory\n",
+    "SECRET_KEY = os.environ[\"SECRET_KEY\"] # secret key for some api\n",
     "\n",
     "def special_string_length(query: str):\n",
     "    return len(query + SECRET_KEY)\n",
@@ -121,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "7",
    "metadata": {
     "metadata": {}
    },
@@ -147,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "8",
    "metadata": {
     "metadata": {}
    },
@@ -160,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "9",
    "metadata": {
     "metadata": {}
    },
@@ -177,7 +167,7 @@
     "            \"python\",\n",
     "            private_script_path.as_posix(),\n",
     "        ],  # set the entrypoint for the runner\n",
-    "        cwd=private_dir.as_posix(),  # make the folder available to the container\n",
+    "        mount_dir=private_dir.as_posix(),  # make the folder available to the container\n",
     "    ),\n",
     ")"
    ]
@@ -185,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "10",
    "metadata": {
     "metadata": {}
    },
@@ -196,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12",
+   "id": "11",
    "metadata": {
     "metadata": {}
    },
@@ -207,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "12",
    "metadata": {
     "metadata": {}
    },
@@ -219,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "13",
    "metadata": {
     "metadata": {}
    },
@@ -231,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "14",
    "metadata": {
     "metadata": {}
    },
@@ -244,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "15",
    "metadata": {
     "metadata": {}
    },
@@ -254,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "16",
    "metadata": {
     "metadata": {}
    },
@@ -266,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "17",
    "metadata": {
     "metadata": {}
    },
@@ -280,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "18",
    "metadata": {
     "metadata": {}
    },
@@ -293,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "19",
    "metadata": {
     "metadata": {}
    },
@@ -306,21 +296,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "20",
    "metadata": {
     "metadata": {}
    },
    "outputs": [],
    "source": [
-    "config = do_client.get_default_config_for_job(job)\n",
-    "config.extra_env.update({\"SECRET_KEY\": \"__AA__\"})\n",
-    "res_job = do_client.run_private(job, config)"
+    "import os\n",
+    "\n",
+    "os.environ[\"SECRET_KEY\"] = \"__AA__\"  # Secret used in the private code\n",
+    "res_job = do_client.run_private(job)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "21",
    "metadata": {
     "metadata": {}
    },
@@ -332,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "22",
    "metadata": {
     "metadata": {}
    },
@@ -344,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "23",
    "metadata": {
     "metadata": {}
    },
@@ -356,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "24",
    "metadata": {
     "metadata": {}
    },
@@ -368,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "25",
    "metadata": {
     "metadata": {}
    },
@@ -380,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": []
