--- a/notebooks/quickstart/ds_flow.ipynb
+++ b/notebooks/quickstart/ds_flow.ipynb
@@ -40,13 +40,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_client = sy.init_session(host=DATA_OWNER)"
+    "# Both the data scientist and data owner are running an RDS app.\n",
+    "# In this notebook, we'll only connect to the RDS app from the data_owner\n",
+    "\n",
+    "sy.discover_rds_apps()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds_client = sy.init_session(host=DATA_OWNER)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,20 +76,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4",
+   "id": "5",
    "metadata": {},
    "source": [
     "# DS investigates datasets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ds_client.datasets"
    ]
   },
   {
@@ -86,12 +89,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ds_client.datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "dataset = ds_client.datasets[0]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7",
+   "id": "8",
    "metadata": {},
    "source": [
     "### Experiment on mock data"
@@ -100,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,16 +130,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9",
+   "id": "10",
    "metadata": {},
    "source": [
-    "# DS submits a job on private data"
+    "# DS submits a job on private data\n",
+    "\n",
+    "Create a `calculate_mean.py`, anywhere on your maching. The below cell uses a `%%writefile` jupyter magic to make this a bit easier"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,10 +162,12 @@
     "import pandas as pd\n",
     "from pathlib import Path\n",
     "\n",
+    "# Standard RDS environment variables, the RDS runner will fill these in.\n",
     "DATA_DIR = os.environ[\"DATA_DIR\"]\n",
     "OUTPUT_DIR = os.environ[\"OUTPUT_DIR\"]\n",
     "\n",
-    "# Load data\n",
+    "# Load data from DATA_DIR\n",
+    "# DATA_DIR will contain the real data, and has the same structure as the mock data.\n",
     "data_file = Path(DATA_DIR) / \"data.csv\"\n",
     "print(f\"Loading data from {data_file.name}...\")\n",
     "df = pd.read_csv(data_file, sep=';')\n",
@@ -160,14 +177,14 @@
     "print(f\"Calculating feature means for {num_rows} rows...\")\n",
     "result = df.mean(numeric_only=True)\n",
     "\n",
-    "# Save result\n",
+    "# Save result to OUTPUT_DIR\n",
     "result.to_csv(Path(OUTPUT_DIR) / \"output.csv\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,27 +194,29 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13",
-   "metadata": {},
-   "source": [
-    "# DS views the results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "14",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "job = ds_client.jobs.get_all()[0]\n",
-    "job.describe()"
+    "# DS views the results\n",
+    "\n",
+    "Before executing the cells below, switch to do_flow.ipynb to review, execute, and publish results"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "job.refresh()\n",
+    "job.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,13 +227,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
     "# View logs\n",
     "print((job.output_path / \"logs\" / \"stdout.log\").read_text())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
