--- a/notebooks/quickstart/do_flow.ipynb
+++ b/notebooks/quickstart/do_flow.ipynb
@@ -32,6 +32,7 @@
     "\n",
     "DATA_OWNER = \"data_owner@openmined.org\"\n",
     "DATA_SCIENTIST = \"data_scientist@openmined.org\"\n",
+    "\n",
     "CLIENTS_PATH = sy.RDS_REPO_PATH / \"syft-rds\" / \".clients\"\n",
     "syftbox_config_path = CLIENTS_PATH / DATA_OWNER / \"config.json\"\n",
     "\n",
@@ -41,9 +42,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3",
+   "metadata": {},
+   "source": [
+    "## Connect"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3",
+   "id": "4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Both the data scientist and data owner are running an RDS app.\n",
+    "# In this notebook, we'll only connect to the RDS app from the data_owner\n",
+    "\n",
+    "sy.discover_rds_apps()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,16 +86,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5",
+   "id": "7",
    "metadata": {},
    "source": [
-    "# Data owner creates a dataset"
+    "# Data owner creates a dataset\n",
+    "\n",
+    "Prepare a small wine quality dataset from the UCI archive<br>\n",
+    "https://archive.ics.uci.edu/dataset/186/wine+quality"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +117,6 @@
     "mock_dir = dataset_dir / \"mock\"\n",
     "markdown_path = dataset_dir / \"description.md\"\n",
     "\n",
-    "# Format readme to 100 chars max per line\n",
     "readme = \"\"\"\n",
     "# Red wine quality dataset\n",
     "\n",
@@ -109,10 +133,11 @@
     "## Source\n",
     "https://archive.ics.uci.edu/dataset/186/wine+quality\n",
     "\"\"\"\n",
+    "print(f\"Downloading {dataset_name} dataset to {dataset_dir.as_posix()}\")\n",
     "\n",
-    "# Check if already exists, else skip\n",
+    "# Download the dataset to a local folder (no-syftbox yet)\n",
     "if dataset_dir.exists():\n",
-    "    print(f\"Dataset {dataset_name} already exists, skipping download\")\n",
+    "    print(\"Dataset already exists, skipping download\")\n",
     "else:\n",
     "    # Create directories\n",
     "    private_dir.mkdir(parents=True, exist_ok=True)\n",
@@ -147,10 +172,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Add dataset to syftbox\n",
+    "\n",
     "dataset = do_client.dataset.create(\n",
     "    name=dataset_name,  # MUST BE UNIQUE. Throw Exception if already exist.\n",
     "    path=private_dir,  # MUST EXIST\n",
@@ -163,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,16 +199,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9",
+   "id": "11",
    "metadata": {},
    "source": [
-    "# Data owner reviews incoming jobs"
+    "# Data owner reviews incoming jobs\n",
+    "\n",
+    "Before executing the cells below, switch to ds_flow.ipynb to submit a job on the wine quality dataset"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,40 +221,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
     "job = jobs[0]\n",
+    "\n",
+    "# Same as job.user_code.describe()\n",
     "job.show_user_code()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "12",
+   "id": "14",
    "metadata": {},
    "source": [
     "# DO executes job and shares the result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "13",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "do_client.run_private(job)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "14",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "_, job = do_client.jobs.share_results(job)"
    ]
   },
   {
@@ -235,13 +246,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "job.describe()"
+    "do_client.run_private(job)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_, job = do_client.jobs.share_results(job)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The job results are shared and now visible in the output_path\n",
+    "job.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": []
