--- a/notebooks/quickstart/full_flow.ipynb
+++ b/notebooks/quickstart/full_flow.ipynb
@@ -17,7 +17,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1",
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "from syft_core.url import SyftBoxURL"
@@ -27,7 +29,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2",
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "SyftBoxURL"
@@ -42,7 +46,16 @@
    },
    "outputs": [],
    "source": [
-    "stack = setup_rds_stack(log_level=\"INFO\")"
+    "from pathlib import Path\n",
+    "\n",
+    "\n",
+    "root_dir = Path(\"/Users/azizwork/Workspace/rds/notebooks/quickstart/data/smh\")\n",
+    "try:\n",
+    "    root_dir.rmdir()\n",
+    "except Exception:\n",
+    "    pass\n",
+    "root_dir.mkdir(parents=True, exist_ok=True)\n",
+    "stack = setup_rds_stack(log_level=\"INFO\", root_dir=root_dir)"
    ]
   },
   {
@@ -72,7 +85,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6",
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "CWD = RDS_NOTEBOOKS_PATH / \"quickstart\""
@@ -82,7 +97,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7",
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "private_dir = CWD / \"data\" / \"dataset-1\" / \"private\"\n",
@@ -171,7 +188,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "13",
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "ds_client.dataset.get(name=\"dataset-1\").get_private_path()"
@@ -204,7 +223,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "16",
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "my_file = CWD / \"data\" / \"code1.py\""
@@ -257,7 +278,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "20",
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "# Code file is moved to a location inside syftbox\n",
@@ -274,7 +297,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "21",
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "jobs = do_client.jobs.get_all()"
@@ -284,7 +309,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "22",
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "job = jobs[-1]"
@@ -294,7 +321,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "23",
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "job"
@@ -304,20 +333,29 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "24",
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
-    "res_job = do_client.run_private(job)"
+    "from pathlib import Path\n",
+    "\n",
+    "config = do_client.get_default_config_for_job(job)\n",
+    "config.use_docker = True\n",
+    "config.runtime.cmd = [\"ls\"]\n",
+    "res_job = do_client.run_private(job, config=config)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "25",
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
-    "do_client.jobs.share_results(res_job);"
+    "do_client.jobs.share_results(res_job)"
    ]
   },
   {
@@ -332,7 +370,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "27",
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "# job.add_to_queue()"
@@ -342,7 +382,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "28",
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "job = ds_client.jobs.get_all()[-1]"
@@ -352,7 +394,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "29",
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "job._syftbox_client"
@@ -362,7 +406,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "30",
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "ds_client._syftbox_client.datasites"
@@ -372,7 +418,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "31",
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "job.output_url"
@@ -382,7 +430,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "32",
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "job.get_output_path()"
@@ -413,7 +463,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
