--- a/notebooks/quickstart/full_flow_functions.ipynb
+++ b/notebooks/quickstart/full_flow_functions.ipynb
@@ -97,6 +97,8 @@
     "\n",
     "INPUT_FILE = os.environ[\"INPUT_FILE\"] # user input file\n",
     "OUTPUT_DIR = os.environ[\"OUTPUT_DIR\"] # job output directory\n",
+    "\n",
+    "\n",
     "SECRET_KEY = os.environ[\"SECRET_KEY\"] # secret key for some api\n",
     "\n",
     "def special_string_length(query: str):\n",
@@ -112,6 +114,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "python do_owner.py ds_code.jpg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8",
    "metadata": {
     "metadata": {}
    },
@@ -137,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "9",
    "metadata": {
     "metadata": {}
    },
@@ -150,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "10",
    "metadata": {
     "metadata": {}
    },
@@ -175,35 +187,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "11",
    "metadata": {
     "metadata": {}
    },
    "outputs": [],
    "source": [
-    "do_client.datasets"
+    "docker python -c my/local/path"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "11",
+   "id": "12",
    "metadata": {
     "metadata": {}
    },
    "source": [
     "# Use dataset as DS"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "12",
-   "metadata": {
-    "metadata": {}
-   },
-   "outputs": [],
-   "source": [
-    "ds_client.datasets"
    ]
   },
   {
@@ -215,13 +215,25 @@
    },
    "outputs": [],
    "source": [
-    "ds_client.dataset.get(name=\"custom_runtime_dataset\").get_mock_path()"
+    "ds_client.datasets"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "14",
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [],
+   "source": [
+    "ds_client.dataset.get(name=\"custom_runtime_dataset\").get_mock_path()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15",
    "metadata": {
     "metadata": {}
    },
@@ -234,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "16",
    "metadata": {
     "metadata": {}
    },
@@ -244,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "17",
    "metadata": {
     "metadata": {}
    },
@@ -256,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "18",
    "metadata": {
     "metadata": {}
    },
@@ -270,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "19",
    "metadata": {
     "metadata": {}
    },
@@ -283,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "20",
    "metadata": {
     "metadata": {}
    },
@@ -296,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "21",
    "metadata": {
     "metadata": {}
    },
@@ -311,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "22",
    "metadata": {
     "metadata": {}
    },
@@ -323,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "23",
    "metadata": {
     "metadata": {}
    },
@@ -335,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "24",
    "metadata": {
     "metadata": {}
    },
@@ -347,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "25",
    "metadata": {
     "metadata": {}
    },
@@ -359,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "26",
    "metadata": {
     "metadata": {}
    },
@@ -371,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": []
