--- a/notebooks/quickstart/full_flow_functions.ipynb
+++ b/notebooks/quickstart/full_flow_functions.ipynb
@@ -117,7 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "python do_owner.py ds_code.jpg"
+    "# python do_owner.py ds_code.jpg"
    ]
   },
   {
@@ -193,7 +193,7 @@
    },
    "outputs": [],
    "source": [
-    "docker python -c my/local/path"
+    "# docker python -c my/local/path"
    ]
   },
   {
