--- a/jobs_folder_submission_test/job_folder_submission.ipynb
+++ b/jobs_folder_submission_test/job_folder_submission.ipynb
@@ -6,9 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import syft_rds as sy\n",
-    "from pathlib import Path\n",
-    "import os"
+    "!uv pip install flwr-datasets"
    ]
   },
   {
@@ -17,16 +15,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PROJECT_PATH = Path(os.getcwd()).parent\n",
-    "DO1 = \"rasswanth@openmined.org\"\n",
-    "DS = \"khoa@openmined.org\"\n",
-    "DS_CONFIG = PROJECT_PATH / \".clients\" / f\"{DS}.json\"\n",
-    "DO1_CONFIG = PROJECT_PATH / \".clients\" / f\"{DO1}.json\"\n",
-    "FLWR_PROJECT_PATH = PROJECT_PATH / \"experimentals\" / \"quickstart-pytorch\"\n",
-    "\n",
-    "print(f\"PROJECT_PATH: {PROJECT_PATH}\")\n",
-    "print(f\"DS_CONFIG: {DS_CONFIG}\")\n",
-    "print(f\"FLWR_PROJECT_PATH: {FLWR_PROJECT_PATH}\")"
+    "from pathlib import Path\n",
+    "from syft_rds.orchestra import setup_rds_stack"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from generate_dataset import save_dataset_to_disk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_dataset_to_disk(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stack = setup_rds_stack(log_level=\"INFO\")"
    ]
   },
   {
@@ -42,10 +59,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "do = sy.init_session(host=DO1, syftbox_client_config_path=DO1_CONFIG)\n",
-    "assert do.host == DO1\n",
-    "assert do.email == DO1\n",
-    "assert do.is_admin"
+    "do_client = stack.do_rds_client\n",
+    "assert do_client.is_admin"
    ]
   },
   {
@@ -55,12 +70,12 @@
    "outputs": [],
    "source": [
     "DATASET_NAME = \"cifar10\"\n",
-    "DATASET_PRIVATE_PATH = FLWR_PROJECT_PATH.parent / \"datasets\" / \"cifar10_part_1\"\n",
-    "DATASET_MOCK_PATH = FLWR_PROJECT_PATH.parent / \"datasets\" / \"cifar10_part_2\"\n",
-    "README_PATH = FLWR_PROJECT_PATH / \"README.md\"\n",
+    "DATASET_PRIVATE_PATH = Path(\".\") / \"datasets\" / \"cifar10_part_1\"\n",
+    "DATASET_MOCK_PATH = Path(\".\") / \"datasets\" / \"cifar10_part_2\"\n",
+    "README_PATH = Path(\".\") / \"datasets\" / \"README.md\"\n",
     "\n",
     "try:\n",
-    "    dataset = do.dataset.create(\n",
+    "    dataset = do_client.dataset.create(\n",
     "        name=DATASET_NAME,\n",
     "        summary=f\"Partitioned {DATASET_NAME} dataset.\",\n",
     "        description_path=README_PATH,\n",
@@ -78,7 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "do.datasets"
+    "do_client.datasets"
    ]
   },
   {
@@ -94,10 +109,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "do_client_1 = sy.init_session(host=DO1, syftbox_client_config_path=DS_CONFIG)\n",
-    "assert not do_client_1.is_admin\n",
-    "assert do_client_1.host == DO1\n",
-    "assert do_client_1.email == DS"
+    "ds_client = stack.ds_rds_client\n",
+    "assert not ds_client.is_admin"
    ]
   },
   {
@@ -106,7 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "do_client_1.datasets[0]"
+    "ds_client.datasets[0]"
    ]
   },
   {
@@ -116,20 +129,45 @@
    "outputs": [],
    "source": [
     "# Job submission\n",
-    "do_client_1.jobs.submit(\n",
+    "ds_client.jobs.submit(\n",
     "    name=\"FLWR Experiment\",\n",
     "    dataset_name=DATASET_NAME,\n",
     "    description=\"Flower Federated Learning Experiment\",\n",
-    "    user_code_path=FLWR_PROJECT_PATH,\n",
+    "    user_code_path=\"./test_folder\",\n",
     "    # runtime=\"./dockerfile\", # path to a local dockerfile\n",
     "    tags=[\"federated\", \"learning\", \"medical\", \"mnist\"],\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds_client.user_code.get_all()[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stack.do_client.config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -143,9 +181,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
