--- a/notebooks/quickstart/full_flow.ipynb
+++ b/notebooks/quickstart/full_flow.ipynb
@@ -253,7 +253,7 @@
     "# Code file is moved to a location inside syftbox\n",
     "\n",
     "code = job.user_code\n",
-    "assert code.local_file.exists()\n",
+    "# assert code.local_file.exists()\n",
     "\n",
     "# Same as: job.code.describe()\n",
     "job.show_user_code()"
@@ -350,6 +350,14 @@
     "output_files = [f for f in job.output_path.glob(\"**/*\") if f.is_file()]\n",
     "assert len(output_files)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -368,7 +376,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
