remove unused functions

--- a/notebooks/quickstart/full_flow.ipynb
+++ b/notebooks/quickstart/full_flow.ipynb
@@ -253,7 +253,7 @@
     "# Code file is moved to a location inside syftbox\n",
     "\n",
     "code = job.user_code\n",
-    "# assert code.local_file.exists()\n",
+    "assert code.local_dir.exists()\n",
     "\n",
     "# Same as: job.code.describe()\n",
     "job.show_user_code()"
@@ -362,7 +362,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
