--- a/notebooks/quickstart/full_flow_folder.ipynb
+++ b/notebooks/quickstart/full_flow_folder.ipynb
@@ -282,7 +282,7 @@
     "# Code file is moved to a location inside syftbox\n",
     "\n",
     "code = job.user_code\n",
-    "# assert code.local_file.exists()\n",
+    "assert code.local_dir.exists()\n",
     "\n",
     "# Same as: job.code.describe()\n",
     "job.show_user_code()"
@@ -383,7 +383,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
