--- a/notebooks/quickstart/full_flow.ipynb
+++ b/notebooks/quickstart/full_flow.ipynb
@@ -20,17 +20,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from syft_core.url import SyftBoxURL"
+    "from syft_core.url import SyftBoxURL\n",
+    "\n",
+    "SyftBoxURL"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "2",
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
-    "SyftBoxURL"
+    "key = \"full_flow_notebook_test\"\n",
+    "stack = setup_rds_stack(key=key, log_level=\"INFO\")"
    ]
   },
   {
@@ -42,25 +47,13 @@
    },
    "outputs": [],
    "source": [
-    "stack = setup_rds_stack(log_level=\"INFO\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4",
-   "metadata": {
-    "metadata": {}
-   },
-   "outputs": [],
-   "source": [
     "do_client = stack.do_rds_client\n",
     "ds_client = stack.ds_rds_client"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5",
+   "id": "4",
    "metadata": {
     "metadata": {}
    },
@@ -71,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,25 +99,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "7",
    "metadata": {
     "metadata": {}
    },
    "outputs": [],
    "source": [
-    "data = do_client.dataset.create(\n",
-    "    name=\"dataset-1\",  # MUST BE UNIQUE. Throw Exception if already exist.\n",
-    "    path=private_dir,  # MUST EXIST\n",
-    "    mock_path=mock_dir,\n",
-    "    summary=\"dummy data\",\n",
-    "    description_path=markdown_path,\n",
-    ")"
+    "try:\n",
+    "    data = do_client.dataset.create(\n",
+    "        name=\"dataset-1\",  # MUST BE UNIQUE. Throw Exception if already exist.\n",
+    "        path=private_dir,  # MUST EXIST\n",
+    "        mock_path=mock_dir,\n",
+    "        summary=\"dummy data\",\n",
+    "        description_path=markdown_path,\n",
+    "    )\n",
+    "except Exception as e:\n",
+    "    if \"already exists\" in str(e):\n",
+    "        print(e)\n",
+    "    else:\n",
+    "        raise e"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "8",
    "metadata": {
     "metadata": {}
    },
@@ -135,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10",
+   "id": "9",
    "metadata": {
     "metadata": {}
    },
@@ -146,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "10",
    "metadata": {
     "metadata": {}
    },
@@ -158,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "11",
    "metadata": {
     "metadata": {}
    },
@@ -170,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "13",
    "metadata": {
     "metadata": {}
    },
@@ -193,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "15",
    "metadata": {
     "metadata": {}
    },
@@ -224,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17",
+   "id": "16",
    "metadata": {},
    "source": [
     "# Submit a job to create UserCode and a Job"
@@ -233,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "17",
    "metadata": {
     "metadata": {}
    },
@@ -246,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20",
+   "id": "19",
    "metadata": {},
    "source": [
     "# DO reviews"
@@ -270,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25",
+   "id": "24",
    "metadata": {},
    "source": [
     "# DS views the results"
@@ -322,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,9 +351,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "28",
+   "metadata": {},
+   "source": [
+    "## Clean up"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from syft_rds.orchestra import remove_rds_stack_dir\n",
+    "\n",
+    "remove_rds_stack_dir(key=key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -376,7 +395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
