restructuring the project

--- a/notebooks/api/dataset_service.ipynb
+++ b/notebooks/api/dataset_service.ipynb
@@ -15,12 +15,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pathlib import Path\n",
     "import requests\n",
     "import zipfile\n",
     "import io\n",
-    "from pathlib import Path\n",
     "\n",
-    "from syft_rds.client.rds_client import init_session"
+    "from syft_rds.client.rds_client import init_session\n",
+    "from syft_rds.orchestra import setup_rds_server, remove_rds_stack_dir\n",
+    "\n",
+    "remove_rds_stack_dir(key=\"rds\", root_dir=Path(\".\"))"
    ]
   },
   {
@@ -30,15 +33,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "HOST_EMAIL = \"khoa@openmined.org\"\n",
-    "CONFIG = \"~/.syftbox/config_stage.json\"\n",
-    "rds_client = init_session(HOST_EMAIL, syftbox_client_config_path=CONFIG)\n",
+    "do_stack = setup_rds_server(email=\"do@openmined.org\", key=\"rds\", root_dir=Path(\".\"))\n",
+    "do = init_session(host=\"do@openmined.org\", syftbox_client=do_stack.client)\n",
     "\n",
-    "print(f\"host: {rds_client.host}\")\n",
-    "print(f\"me: {rds_client.email}\")\n",
-    "print(f\"is admin?: {rds_client.is_admin}\")\n",
-    "print(f\"server = {rds_client._syftbox_client.config.server_url}\")\n",
-    "assert rds_client.is_admin"
+    "print(f\"host: {do.host}\")\n",
+    "print(f\"me: {do.email}\")\n",
+    "print(f\"is admin?: {do.is_admin}\")\n",
+    "print(f\"server = {do._syftbox_client.config.server_url}\")\n",
+    "assert do.is_admin"
    ]
   },
   {
@@ -48,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rds_client.datasets"
+    "do.datasets"
    ]
   },
   {
@@ -86,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = rds_client.dataset.create(\n",
+    "data = do.dataset.create(\n",
     "    name=\"Census\",  # MUST BE UNIQUE. Throw Exception if already exist.\n",
     "    path=\"./data/census/private\",  # MUST EXIST\n",
     "    mock_path=\"./data/census/mock\",\n",
@@ -103,7 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "census_data = rds_client.dataset.get(name=\"Census\")\n",
+    "census_data = do.dataset.get(name=\"Census\")\n",
     "census_data"
    ]
   },
@@ -184,7 +186,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data2 = rds_client.dataset.create(\n",
+    "data2 = do.dataset.create(\n",
     "    name=\"MedMNIST\",  # MUST BE UNIQUE. Throw Exception if already exist.\n",
     "    path=\"./data/med_MNIST/private\",  # MUST EXIST\n",
     "    mock_path=\"./data/med_MNIST/mock\",\n",
@@ -201,7 +203,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "medMnist_data = rds_client.dataset.get(name=\"MedMNIST\")\n",
+    "medMnist_data = do.dataset.get(name=\"MedMNIST\")\n",
     "medMnist_data"
    ]
   },
@@ -270,7 +272,7 @@
    "id": "22",
    "metadata": {},
    "source": [
-    "### Delete Dataset"
+    "## DS"
    ]
   },
   {
@@ -280,7 +282,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rds_client.dataset.delete(name=\"Census\")"
+    "from syft_rds.client.rds_client import init_session\n",
+    "\n",
+    "ds_stack = setup_rds_server(email=\"ds@openmined.org\", key=\"rds\", root_dir=Path(\".\"))\n",
+    "\n",
+    "ds = ds_stack.init_session(host=\"do@openmined.org\")\n",
+    "print(f\"host: {ds.host}\")\n",
+    "print(f\"me: {ds.email}\")\n",
+    "print(f\"is admin?: {ds.is_admin}\")\n",
+    "assert not ds.is_admin"
    ]
   },
   {
@@ -290,7 +300,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rds_client.dataset.delete(name=\"MedMNIST\")"
+    "datasets = ds.dataset.get_all()\n",
+    "datasets"
    ]
   },
   {
@@ -299,15 +310,17 @@
    "id": "25",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "assert len(datasets) == 2"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "26",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## DO delete datasets"
+   ]
   },
   {
    "cell_type": "code",
@@ -315,15 +328,18 @@
    "id": "27",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "do.dataset.delete(name=\"Census\")\n",
+    "do.dataset.delete(name=\"MedMNIST\")"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "28",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Cleaning"
+   ]
   },
   {
    "cell_type": "code",
@@ -331,7 +347,9 @@
    "id": "29",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "remove_rds_stack_dir(key=\"rds\", root_dir=Path(\".\"))"
+   ]
   },
   {
    "cell_type": "code",
@@ -339,12 +357,46 @@
    "id": "30",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "!rm -rf \"./data\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -358,7 +410,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
